[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Meng Bo", email = "mengbo@lnu.edu.cn"},
]
dependencies = [
    "openai>=0.25.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
